--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,28 @@
 
 body{
+    margin: 0;
+    padding: 0;
     background-image: url(imagenes/polygon-scatter-haikei.png);
     background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+}
+.header{
+    background-color: #004157;
+    height: 30px;
+    width: 100%;
 }
 
 h1{
     text-align: center;
-    font-size: 80px;
+    font-size: 30px;
+   
 }
 
 h2{
     text-align: center;
-    font-size: 68px;
+    font-size: 30px;
+    margin-top: -1%;
+  
 }
 
 .pfaes {
@@ -23,9 +34,35 @@ grid-column-gap: 19px;
 grid-row-gap: 0px;
 }
 
-.playa { grid-area: 1 / 1 / 2 / 2; }
-.web { grid-area: 1 / 2 / 2 / 3; }
+
+.web { grid-area: 1 / 1 / 2 / 2; }
+.playa { grid-area: 1 / 2 / 2 / 3; }
 .futuro { grid-area: 1 / 3 / 2 / 4; }
+
+.imagen_playa{
+    filter: opacity(0.4) drop-shadow(0 0 0 #E11F20); 
+}
+.imagen_web{
+    filter: opacity(0.4) drop-shadow(0 0 0 #206F9D); 
+}
+.imagen_futuro{
+    filter: opacity(0.4) drop-shadow(0 0 0 #ED8600); 
+}
+.p{  
+    color:white;
+    font-size: 35px;
+    transform: translateY(-200%);
+    text-align: center;
+   
+}
+a{
+    text-decoration: none;
+}
+   
+       
+        
+
+
 
 .logos {
 display: grid;
@@ -33,10 +70,11 @@ grid-template-columns: repeat(5, 1fr);
 grid-template-rows: 1fr;
 grid-column-gap: 0px;
 grid-row-gap: 0px;
+margin-top: -11%;
 }
 
-.canarias { grid-area: 1 / 1 / 2 / 2; }
+.canarias { grid-area: 1 / 1 / 2 / 2; margin-top: 11%; }
 .espana { grid-area: 1 / 2 / 2 / 3; }
 .juvenil { grid-area: 1 / 3 / 2 / 4; }
-.tias { grid-area: 1 / 4 / 2 / 5; }
-.europa { grid-area: 1 / 5 / 2 / 6; }
+.tias { grid-area: 1 / 4 / 2 / 5;  margin-top: 11%; }
+.europa { grid-area: 1 / 5 / 2 / 6;  margin-top: 13%; }
