--- a/estilo.css
+++ b/estilo.css
@@ -41,12 +41,18 @@ grid-row-gap: 0px;
 
 .imagen_playa{
     filter: opacity(0.4) drop-shadow(0 0 0 #E11F20); 
+    width: 100%;
+   height: 284px;
 }
 .imagen_web{
     filter: opacity(0.4) drop-shadow(0 0 0 #206F9D); 
+    width: 100%;
+    height: 284px;
 }
 .imagen_futuro{
     filter: opacity(0.4) drop-shadow(0 0 0 #ED8600); 
+    width: 100%;
+    height: 284px;
 }
 .p{  
     color:white;
@@ -78,3 +84,62 @@ margin-top: -11%;
 .juvenil { grid-area: 1 / 3 / 2 / 4; }
 .tias { grid-area: 1 / 4 / 2 / 5;  margin-top: 11%; }
 .europa { grid-area: 1 / 5 / 2 / 6;  margin-top: 13%; }
+
+
+
+/* ..........................................VERSIÓN MÓVIL.................................................... */
+@media screen and ( max-width: 600px){
+
+
+    .pfaes {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        height: -1400px;
+       
+       
+        }
+        
+        .playa { grid-area: 1 / 1; margin-top: 2%; }
+        .web{ grid-area: 2 / 1 ; margin-top: -30%; }
+        .futuro { grid-area: 3 / 1; margin-top: -62%; }
+    
+
+
+.logos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-left: -20%;
+    margin-top: -80%;
+    margin-bottom: -500%;
+    height: -500px;
+    }
+    
+    .canarias { grid-area: 1 / 2 / 2 / 3; }
+    .espana { grid-area: 1 / 4 / 2 / 5; }
+    .juvenil { grid-area: 1 / 6 / 2 / 7; }
+    .tias { grid-area: 2 / 3 / 3 / 4; }
+    .europa { grid-area: 2 / 5 / 3 / 6; }
+    
+
+
+    .logo_canarias{
+        width: 100%;
+    }
+    .logo_spain{
+        width: 100%;
+    }
+    .logo_juvenil{
+        width: 100%;
+    }
+    .logo_tias{
+        width: 100%;
+    }
+}
+  
+
